--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -25,6 +25,7 @@
 @import "./template/elements/title-group.scss";
 @import "./template/elements/text.scss";
 @import "./template/elements/title.scss";
+@import "./template/elements/custom-table.scss";
 
 // SECTIONS
 @import "./template/sections/account-types.scss";
