--- a/src/scss/template/sections/account-types.scss
+++ b/src/scss/template/sections/account-types.scss
@@ -1,22 +1,6 @@
 .account-types {
-    .container {
-        @media (max-width: 991px) {
-            max-width: 100%;
-            padding: 0;
-            
-            .title-group__wrapper {
-                margin-left: 40px;
-                margin-right: 40px;
-            }
-        }
-
-        @media (max-width: 767px) {
-            .title-group__wrapper {
-                margin-left: 15px;
-                margin-right: 15px;
-            }
-        }
-    }
+    padding-bottom: 50px;
+    margin-bottom: 100px;
 
     &__slider {
         .splide__list {
@@ -31,7 +15,27 @@
         }
     }
 
-    @media (max-width: 991px)  {
+    @media (max-width: 991px) {
+        .container {
+            max-width: 100%;
+            padding: 0;
+        }
+
+        .row {
+            margin: 0;
+        }
+
+        .col {
+            max-width: 100%;
+            padding: 0;
+        }
+
+        
+        .title-group__wrapper {
+            margin-left: 40px;
+            margin-right: 40px;
+        }
+
         &__slider {
             .splide__list {
                 .splide__slide {
@@ -40,5 +44,21 @@
                 }
             }
         }
+    }
+
+    @media (max-width: 767px) {
+        padding-bottom: 50px;
+        margin-bottom: 70px;
+
+        
+        .title-group__wrapper {
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+    }
+
+    @media (max-width: 360px) {
+        padding-bottom: 50px;
+        margin-bottom: 50px;
     }
 }
