--- a/src/scss/template/sections/hero.scss
+++ b/src/scss/template/sections/hero.scss
@@ -33,6 +33,13 @@
             letter-spacing: -2px;
         }
 
+        .title--md {
+            font-size: 50px;
+            line-height: 110%;
+            font-weight: 400;
+            letter-spacing: -2px;
+        }
+
         .subtitle {
             font-size: 20px;
             line-height: 120%;
@@ -73,7 +80,17 @@
 
     &.trading-hero {
         background-color: $black;
-        background-image: url(/images/hero/tradings-hero-bg.png);
+        background-image: url('/images/hero/tradings-hero-bg.png');
+        background-repeat: no-repeat;
+        background-position: calc(50% + 300px) bottom;
+        background-size: contain;
+        padding-top: 110px;
+        padding-bottom: 110px;
+    }
+
+    &.account-types-hero {
+        background-color: $black;
+        background-image: url('/images/hero/account-types-hero-bg.png');
         background-repeat: no-repeat;
         background-position: calc(50% + 300px) bottom;
         background-size: contain;
@@ -83,7 +100,7 @@
 
     &.forex-trading-hero {
         background-color: $black;
-        background-image: url(/images/hero/forex-trading-hero-bg.png);
+        background-image: url('/images/hero/forex-trading-hero-bg.png');
         background-repeat: no-repeat;
         background-position: calc(50% + 300px) bottom;
         background-size: contain;
@@ -93,7 +110,7 @@
 
     &.futures-trading-hero {
         background-color: $black;
-        background-image: url(/images/hero/futures-trading-hero-bg.png);
+        background-image: url('/images/hero/futures-trading-hero-bg.png');
         background-repeat: no-repeat;
         background-position: calc(50% + 300px) bottom;
         background-size: contain;
@@ -103,7 +120,7 @@
 
     &.spot-indices-hero {
         background-color: $black;
-        background-image: url(/images/hero/spot-indices-hero-bg.png);
+        background-image: url('/images/hero/spot-indices-hero-bg.png');
         background-repeat: no-repeat;
         background-position: calc(50% + 300px) bottom;
         background-size: contain;
@@ -113,7 +130,7 @@
 
     &.shares-and-stocks-hero {
         background-color: $black;
-        background-image: url(/images/hero/shares-and-stocks-hero-bg.png);
+        background-image: url('/images/hero/shares-and-stocks-hero-bg.png');
         background-repeat: no-repeat;
         background-position: calc(50% + 300px) bottom;
         background-size: contain;
@@ -123,7 +140,7 @@
 
     &.precious-metals-hero {
         background-color: $black;
-        background-image: url(/images/hero/precious-metals-hero-bg.png);
+        background-image: url('/images/hero/precious-metals-hero-bg.png');
         background-repeat: no-repeat;
         background-position: calc(50% + 300px) bottom;
         background-size: contain;
@@ -133,7 +150,7 @@
 
     &.cfds-on-energy-hero {
         background-color: $black;
-        background-image: url(/images/hero/cfds-on-energy-hero-bg.png);
+        background-image: url('/images/hero/cfds-on-energy-hero-bg.png');
         background-repeat: no-repeat;
         background-position: calc(50% + 300px) bottom;
         background-size: contain;
@@ -141,10 +158,29 @@
         padding-bottom: 110px;
     }
 
-    
     &.ndd-execution-hero {
         background-color: $black;
-        background-image: url(/images/hero/ndd-execution-hero-bg.png);
+        background-image: url('/images/hero/ndd-execution-hero-bg.png');
+        background-repeat: no-repeat;
+        background-position: calc(50% + 300px) bottom;
+        background-size: contain;
+        padding-top: 160px;
+        padding-bottom: 160px;
+    }
+
+    &.economic-calendar-hero {
+        background-color: $black;
+        background-image: url('/images/hero/economic-calendar-hero-bg.png');
+        background-repeat: no-repeat;
+        background-position: calc(50% + 300px) bottom;
+        background-size: contain;
+        padding-top: 160px;
+        padding-bottom: 160px;
+    }
+
+    &.payment-methods-hero {
+        background-color: $black;
+        background-image: url('/images/hero/payment-methods-hero-bg.png');
         background-repeat: no-repeat;
         background-position: calc(50% + 300px) bottom;
         background-size: contain;
@@ -162,6 +198,13 @@
         }
 
         &.trading-hero {
+            background-position: calc(50% + 330px) bottom;
+            background-size: contain;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+
+        &.account-types-hero {
             background-position: calc(50% + 330px) bottom;
             background-size: contain;
             padding-top: 60px;
@@ -203,6 +246,20 @@
             padding-bottom: 60px;
         }
 
+        &.economic-calendar-hero {
+            background-position: calc(50% + 330px) bottom;
+            background-size: contain;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+
+        &.payment-methods-hero {
+            background-position: calc(50% + 330px) bottom;
+            background-size: contain;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+
         .title-group {
             .text {
                 margin-top: 20px;
@@ -228,15 +285,22 @@
         }
 
         &.trading-hero {
-            background-image: url(/images/hero/tradings-hero-bg-mobile.png);
+            background-image: url('/images/hero/tradings-hero-bg-mobile.png');
             background-position: right bottom;
             background-size: 770px;
             padding-top: 80px;
             padding-bottom: 420px;
         }
 
+        &.account-types-hero {
+            background-position: center bottom;
+            background-size: 600px;
+            padding-top: 80px;
+            padding-bottom: 400px;
+        }
+
         &.forex-trading-hero {
-            background-image: url(/images/hero/forex-trading-hero-bg-mobile.png);
+            background-image: url('/images/hero/forex-trading-hero-bg-mobile.png');
             background-position: center bottom;
             background-size: 600px;
             padding-top: 80px;
@@ -277,6 +341,20 @@
             padding-top: 80px;
             padding-bottom: 420px;
         }
+
+        &.economic-calendar-hero {
+            background-position: right bottom;
+            background-size: 600px;
+            padding-top: 80px;
+            padding-bottom: 350px;
+        }
+
+        &.payment-methods-hero {
+            background-position: right bottom;
+            background-size: 600px;
+            padding-top: 80px;
+            padding-bottom: 350px;
+        }
     }
 
     @media (max-width: 768px) {
@@ -306,6 +384,12 @@
             background-size: 480px;
             padding-top: 70px;
             padding-bottom: 240px;
+        }
+
+        &.account-types-hero {
+            background-size: 480px;
+            padding-top: 70px;
+            padding-bottom: 300px;
         }
 
         &.futures-trading-hero {
@@ -338,6 +422,19 @@
             padding-bottom: 340px;
         }
 
+        &.economic-calendar-hero {
+            background-size: 480px;
+            padding-top: 70px;
+            padding-bottom: 250px;
+            background-position: calc(100% + 50px) bottom;
+        }
+
+        &.payment-methods-hero {
+            background-size: 480px;
+            padding-top: 70px;
+            padding-bottom: 340px;
+        }
+
         &-variables {
             bottom: -200px;
             padding: 50px 30px;
@@ -355,6 +452,10 @@
         .title-group {
             .title {
                 font-size: 40px;
+            }
+
+            .title--md {
+                font-size: 36px;
             }
     
             .text {
