--- a/src/scss/template/sections/info.scss
+++ b/src/scss/template/sections/info.scss
@@ -18,6 +18,20 @@
         background-position: calc(50% + 300px) top;
     }
 
+    &--ratings {
+        &__image {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+
+            img {
+                width: 100%;
+                max-width: 700px;
+            }
+        }
+    }
+
     &__list {
         padding-left: 60px;
 
