--- a/src/scss/template/sections/hero.scss
+++ b/src/scss/template/sections/hero.scss
@@ -197,7 +197,37 @@
         padding-top: 160px;
         padding-bottom: 160px;
     }
-   
+
+    &.about-hero {
+        background-color: $black;
+        background-image: url('/images/hero/about-hero-bg.png');
+        background-repeat: no-repeat;
+        background-position: calc(50% + 300px) bottom;
+        background-size: contain;
+        padding-top: 160px;
+        padding-bottom: 160px;
+    }
+
+    &.trading-tools-hero {
+        background-color: $black;
+        background-image: url('/images/hero/trading-tools-hero-bg.png');
+        background-repeat: no-repeat;
+        background-position: calc(50% + 300px) bottom;
+        background-size: contain;
+        padding-top: 160px;
+        padding-bottom: 160px;
+    }
+
+    &.market-analysis-hero {
+        background-color: $black;
+        background-image: url('/images/hero/market-analysis-hero-bg.png');
+        background-repeat: no-repeat;
+        background-position: calc(50% + 300px) bottom;
+        background-size: contain;
+        padding-top: 160px;
+        padding-bottom: 160px;
+    }
+    
     @media (max-width: 1320px) {
         &.main-hero {
             padding-top: 140px;
@@ -271,6 +301,27 @@
         }
 
         &.credit-rating-hero {
+            background-position: calc(50% + 330px) bottom;
+            background-size: contain;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+
+        &.about-hero {
+            background-position: calc(50% + 330px) bottom;
+            background-size: contain;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+
+        &.trading-tools-hero {
+            background-position: calc(50% + 330px) bottom;
+            background-size: contain;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+
+        &.market-analysis-hero {
             background-position: calc(50% + 330px) bottom;
             background-size: contain;
             padding-top: 60px;
@@ -379,6 +430,27 @@
             padding-top: 80px;
             padding-bottom: 350px;
         }
+
+        &.about-hero {
+            background-position: center bottom;
+            background-size: 600px;
+            padding-top: 80px;
+            padding-bottom: 350px;
+        }
+
+        &.trading-tools-hero {
+            background-position: center bottom;
+            background-size: 600px;
+            padding-top: 80px;
+            padding-bottom: 350px;
+        }
+
+        &.market-analysis-hero {
+            background-position: center bottom;
+            background-size: 600px;
+            padding-top: 80px;
+            padding-bottom: 350px;
+        }
     }
 
     @media (max-width: 768px) {
@@ -460,6 +532,24 @@
         }
 
         &.credit-rating-hero {
+            background-size: 480px;
+            padding-top: 70px;
+            padding-bottom: 340px;
+        }
+
+        &.about-hero {
+            background-size: 480px;
+            padding-top: 70px;
+            padding-bottom: 340px;
+        }
+
+        &.trading-tools-hero {
+            background-size: 480px;
+            padding-top: 70px;
+            padding-bottom: 340px;
+        }
+
+        &.market-analysis-hero {
             background-size: 480px;
             padding-top: 70px;
             padding-bottom: 340px;
