add contacts page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -26,6 +26,7 @@
 @import "./template/elements/text.scss";
 @import "./template/elements/title.scss";
 @import "./template/elements/custom-table.scss";
+@import "./template/elements/form-control.scss";
 
 // SECTIONS
 @import "./template/sections/account-types.scss";
@@ -35,6 +36,7 @@
 @import "./template/sections/info.scss";
 @import "./template/sections/partner.scss";
 @import "./template/sections/shares.scss";
+@import "./template/sections/contacts.scss";
 
 // @import "./template/sections/statistic.scss";
 // @import "./template/sections/technology.scss";
