--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -52,7 +52,8 @@ $spacers: (
   30px: 30px,
   40px: 40px,
   50px: 50px,
-  60px: 60px
+  60px: 60px,
+  100px: 100px
 );
 $gutters: (
   0: 0,
@@ -63,4 +64,6 @@ $gutters: (
   5: $spacer * 3,
   15px: 15px,
   20px: 20px,
+  60px: 60px,
+  90px: 90px,
 );
