add register page

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,6 +18,8 @@
 @import "./template/elements/card-big.scss";
 @import "./template/elements/card-light.scss";
 @import "./template/elements/card-list.scss";
+@import "./template/elements/card-list-light.scss";
+@import "./template/elements/card-check.scss";
 @import "./template/elements/card.scss";
 @import "./template/elements/icon.scss";
 @import "./template/elements/list-marked.scss";
