--- a/src/scss/template/elements/text.scss
+++ b/src/scss/template/elements/text.scss
@@ -38,6 +38,10 @@
             font-size: 16px;
         }
 
+        &--extra-md {
+            font-size: 16px;
+        }
+
         &--sm {
             font-size: 14px;  
         }
