--- a/src/scss/template/sections/hero.scss
+++ b/src/scss/template/sections/hero.scss
@@ -227,7 +227,17 @@
         padding-top: 160px;
         padding-bottom: 160px;
     }
-    
+
+    &.register-hero {
+        background-color: $black;
+        background-image: url('/images/hero/register-hero-bg.png');
+        background-repeat: no-repeat;
+        background-position: calc(50% + 300px) bottom;
+        background-size: contain;
+        padding-top: 160px;
+        padding-bottom: 160px;
+    }
+ 
     @media (max-width: 1320px) {
         &.main-hero {
             padding-top: 140px;
@@ -322,6 +332,13 @@
         }
 
         &.market-analysis-hero {
+            background-position: calc(50% + 330px) bottom;
+            background-size: contain;
+            padding-top: 60px;
+            padding-bottom: 60px;
+        }
+
+        &.register-hero {
             background-position: calc(50% + 330px) bottom;
             background-size: contain;
             padding-top: 60px;
@@ -451,6 +468,13 @@
             padding-top: 80px;
             padding-bottom: 350px;
         }
+
+        &.register-hero {
+            background-position: center bottom;
+            background-size: 600px;
+            padding-top: 80px;
+            padding-bottom: 350px;
+        }
     }
 
     @media (max-width: 768px) {
@@ -550,6 +574,12 @@
         }
 
         &.market-analysis-hero {
+            background-size: 480px;
+            padding-top: 70px;
+            padding-bottom: 340px;
+        }
+
+        &.register-hero {
             background-size: 480px;
             padding-top: 70px;
             padding-bottom: 340px;
