--- a/src/scss/template/elements/bg-block.scss
+++ b/src/scss/template/elements/bg-block.scss
@@ -4,6 +4,11 @@
         border-radius: 30px;
     }
 
+    &--extra-md {
+        padding: 30px;
+        border-radius: 20px;
+    }
+
     &--md {
         padding: 20px 30px;
         border-radius: 30px;
@@ -32,5 +37,11 @@
 
     ul {
         padding-left: 16px;
+    }
+    
+    @media (max-width: 480px) {
+        &--extra-md {
+            padding: 20px;
+        }
     }
 }
