--- a/src/scss/template/elements/buttons.scss
+++ b/src/scss/template/elements/buttons.scss
@@ -36,6 +36,12 @@
             background-repeat: no-repeat;
             background-position: center;
         }
+
+        &.btn--icon-only {
+            padding: 0;
+            width: 60px;
+            height: 60px;
+        }
     }
 
     &.btn--black {
