--- a/src/scss/template/elements/card.scss
+++ b/src/scss/template/elements/card.scss
@@ -13,8 +13,25 @@
         height: 100%;
     }
 
+    &--sm {
+        gap: 20px;
+        padding: 30px;
+        border-radius: 20px;
+    }
+
     &__content {
         position: relative;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+    }
+
+    &__controls {
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        flex-grow: 1;
     }
 
     &__preview {
