--- a/src/scss/template/elements/icon.scss
+++ b/src/scss/template/elements/icon.scss
@@ -8,5 +8,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+
+        &--lg {
+            width: 50px;
+            height: 50px;
+        }
     }
 }
