--- a/src/scss/template/header.scss
+++ b/src/scss/template/header.scss
@@ -25,7 +25,7 @@
     .navbar {
         padding: 24px 0;
     }
-    
+
     .navbar-brand {
         padding: 0;
         height: 41px;
@@ -71,30 +71,63 @@
                 &:hover {
                     color: $orange;
                 }
+
+                &.dropdown-toggle {
+                    &::after {
+                        border-top: 8px solid;
+                        border-right: 4px solid transparent;
+                        border-left: 4px solid transparent;
+                        vertical-align: 2px;
+                        margin-left: 2px;
+                    }
+
+                    &.show {
+                        color: $orange;
+
+                        &::after {
+                            transform: rotate(180deg);
+                            border-top: 8px solid;
+                            border-right: 4px solid transparent;
+                            border-left: 4px solid transparent;
+                        }
+                    }
+                }
             }
 
             .dropdown-menu {
                 background-color: $white;
+                padding: 10px;
+                border-radius: 20px;
+                margin-top: 30px;
 
                 .dropdown-item {
                     font-size: 16px;
-                    line-height: 22px;
+                    line-height: 24px;
                     font-weight: 500;
                     color: $black;
+                    border-radius: 10px;
+                    display: flex;
+                    align-items: center;
+                    min-height: 40px;
 
                     &.active {
-                        background-color: $white;
-                        color: $orange;
+                        background-color: $orange;
+                        color: $white;
                     }
-    
+
                     &:hover {
-                        background-color: $white;
-                        color: $orange;
+                        background-color: $orange;
+                        color: $white;
                     }
 
                     &:focus-visible {
                         outline: none;
                     }
+                }
+
+                @media (max-width: 990px) {
+                    margin-top: 0;
+                    box-shadow: none;
                 }
             }
         }
