--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -29,6 +29,7 @@
 @import "./template/elements/title.scss";
 @import "./template/elements/custom-table.scss";
 @import "./template/elements/form-control.scss";
+@import "./template/elements/language-select.scss";
 
 // SECTIONS
 @import "./template/sections/account-types.scss";
