--- a/src/scss/template/footer.scss
+++ b/src/scss/template/footer.scss
@@ -7,11 +7,32 @@
     &-logo {
         display: flex;
         align-items: center;
-        gap: 15px;
-        color: $white;
-        font-size: 30px;
-        line-height: 36px;
+        gap: 12px;
         text-decoration: none;
+
+        .logo-text {
+            color: $white;
+            font-size: 30px;
+            font-weight: bold;
+            line-height: 36px;
+            display: inline-flex;
+            gap: 4px;
+
+            span {
+                position: relative;
+
+                &::before {
+                    content: '';
+                    width: 6px;
+                    height: 6px;
+                    border-radius: 50%;
+                    background-color: $orange;
+                    position: absolute;
+                    top: calc(50% - 0px);
+                    left: -3px;
+                }
+            }
+        }
     }
 
     hr {
