--- a/src/scss/template/header.scss
+++ b/src/scss/template/header.scss
@@ -10,11 +10,32 @@
     &-logo {
         display: flex;
         align-items: center;
-        gap: 15px;
-        color: $black;
-        font-size: 30px;
-        line-height: 36px;
+        gap: 12px;
         text-decoration: none;
+
+        .logo-text {
+            color: $black;
+            font-size: 30px;
+            font-weight: bold;
+            line-height: 36px;
+            display: inline-flex;
+            gap: 4px;
+
+            span {
+                position: relative;
+
+                &::before {
+                    content: '';
+                    width: 6px;
+                    height: 6px;
+                    border-radius: 50%;
+                    background-color: $orange;
+                    position: absolute;
+                    top: calc(50% - 0px);
+                    left: -3px;
+                }
+            }
+        }
     }
 
     &-controls {
@@ -24,6 +45,12 @@
 
     .navbar {
         padding: 24px 0;
+    }
+
+    .navbar-toggler-container {
+        display: flex;
+        align-items: center;
+        gap: 16px;
     }
 
     .navbar-brand {
@@ -70,6 +97,10 @@
 
                 &:hover {
                     color: $orange;
+                }
+
+                @media (max-width: 1320px) {
+                    padding: 10px 10px;
                 }
 
                 &.dropdown-toggle {
