--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -40,19 +40,7 @@
 @import "./template/sections/partner.scss";
 @import "./template/sections/shares.scss";
 @import "./template/sections/contacts.scss";
-
-// @import "./template/sections/statistic.scss";
-// @import "./template/sections/technology.scss";
-// @import "./template/sections/worldwide.scss";
-// @import "./template/sections/ambitions.scss";
-// @import "./template/sections/environment.scss";
-// @import "./template/sections/account.scss";
-// @import "./template/sections/features.scss";
-// 
-// @import "./template/sections/seamlessly-trade.scss";
-// @import "./template/sections/pamm-info.scss";
-// @import "./template/sections/advantages.scss";
-// @import "./template/sections/contacts.scss";
+@import "./template/sections/not-found-hero.scss";
 
 // PAGES
 @import "./template/pages/main-page.scss";
