--- a/src/scss/template/sections/hero.scss
+++ b/src/scss/template/sections/hero.scss
@@ -150,7 +150,7 @@
 
     &.cfds-on-energy-hero {
         background-color: $black;
-        background-image: url('/images/hero/cfds-on-energy-hero-bg.png');
+        background-image: url('/images/hero/cfds-on-energy-hero-bg.webp');
         background-repeat: no-repeat;
         background-position: calc(50% + 300px) bottom;
         background-size: contain;
